# zhihang2024

./: README.md  one_step_to_start.sh
src/Yolov8_ros/yolov8_ros/: CMakeLists.txt  package.xml
src/Yolov8_ros/yolov8_ros/include/: yolo_tracker.hpp
src/Yolov8_ros/yolov8_ros/launch/: yolo_v8.launch
src/Yolov8_ros/yolov8_ros/scripts/: yolo_v8.py
src/Yolov8_ros/yolov8_ros/src/: yolo_tracker.cpp
src/angle_tracker/: CMakeLists.txt  package.xml
src/angle_tracker/src/: angle_tracker.cpp
src/score_module/: CMakeLists.txt  package.xml
src/score_module/src/: score.cpp
src/ship_detector/: CMakeLists.txt  package.xml
src/ship_detector/include/ship_detector/: ship_land_helper.hpp
src/ship_detector/launch/: ship_detectors.launch
src/ship_detector/msg/: circle_m.msg
src/ship_detector/src/: ship_detector.cpp  ship_lander.cpp
src/ship_tracker/: CMakeLists.txt  package.xml
src/ship_tracker/include/ship_detector/: ship_tracker.hpp
src/ship_tracker/msg/: circle_part_m.msg
src/ship_tracker/src/: ship_land_helper.cpp  ship_tracker.cpp
src/vtol_navigation/: vtol_navigation_1.py  vtol_navigation_2.py
