<?xml version="1.0"?>
<package format="2">
  <name>yolov8_ros</name>
  <version>1.0.0</version>
  <description>The yolov8_ros package</description>

  <maintainer email="qq44642754@163.com">Zhitao Zheng</maintainer>

  <license>APLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <export>

  </export>
</package>
